tests/fixtures/realworld/istio/valid/case-060-RW-8-Istio-Valid-5-Gateway-HTTPS-SIMPLE-mode.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: https-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/cert/cert.pem
      privateKey: /etc/istio/cert/key.pem
    hosts:
    - "*.example.com"
